--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -54,51 +54,33 @@
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay">
 
-                <RelativeLayout
+                <LinearLayout
                     android:id="@+id/date_picker_button"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     android:background="?android:selectableItemBackground"
                     android:clickable="true"
-                    android:orientation="vertical"
+                    android:orientation="horizontal"
                     android:focusable="true">
-
-                    <View
-                        android:id="@+id/centerInParent"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_centerVertical="true" />
-
-                    <TextView
-                        android:id="@+id/title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_above="@id/centerInParent"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
-                        android:textColor="@android:color/white" />
 
                     <TextView
                         android:id="@+id/date_picker_text_view"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/centerInParent"
+                        android:layout_height="match_parent"
                         android:ellipsize="end"
+                        android:gravity="center"
                         android:maxLines="1"
-                        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
+                        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                         android:textColor="@android:color/white" />
 
                     <ImageView
                         android:id="@+id/date_picker_arrow"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBottom="@id/date_picker_text_view"
-                        android:layout_toRightOf="@id/date_picker_text_view"
+                        android:layout_height="match_parent"
                         app:srcCompat="@drawable/ic_arrow_drop_down"
                         tools:ignore="ContentDescription,RtlHardcoded" />
 
-                </RelativeLayout>
+                </LinearLayout>
             </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.CollapsingToolbarLayout>
